--- a/lib/loofgodd_web/components/layouts/app.html.heex
+++ b/lib/loofgodd_web/components/layouts/app.html.heex
@@ -1,26 +1,94 @@
 <header class="px-4 sm:px-6 lg:px-8">
-  <div class="flex items-center justify-between border-b border-zinc-100 py-3 text-sm">
-    <div class="flex items-center gap-4">
+  <div class="flex items-center justify-between border-b py-3 text-sm">
+    <div class="grid grid-cols-[auto_1fr_auto] w-full items-center justify-center">
       <a href="/">
-        <img src={~p"/images/logo.svg"} width="36" />
+        <img src={~p"/images/logo.png"} width="100" />
       </a>
-      <p class="bg-brand/5 text-brand rounded-full px-2 font-medium leading-6">
-        v{Application.spec(:phoenix, :vsn)}
-      </p>
-    </div>
-    <div class="flex items-center gap-4 font-semibold leading-6 text-zinc-900">
-      <a href="https://twitter.com/elixirphoenix" class="hover:text-zinc-700">
-        @elixirphoenix
-      </a>
-      <a href="https://github.com/phoenixframework/phoenix" class="hover:text-zinc-700">
-        GitHub
-      </a>
-      <a
-        href="https://hexdocs.pm/phoenix/overview.html"
-        class="rounded-lg bg-zinc-100 px-2 py-1 hover:bg-zinc-200/80"
-      >
-        Get Started <span aria-hidden="true">&rarr;</span>
-      </a>
+      <div class="md:flex items-center hidden justify-center">
+        <.header
+          :for={
+            %{title: title, path: path} <- [
+              %{title: "Home", path: "/"},
+              %{title: "About", path: "/about"},
+              %{title: "Blog", path: "/blog"},
+              %{title: "Projects", path: "/projects"}
+            ]
+          }
+          class={[
+            @current_uri == path &&
+              "uderline underline-offset-4 bg-gray-200 ",
+            "px-3 py-1 rounded-md w-24 text-gray-700 hover:bg-gray-200 grid place-items-center"
+          ]}
+        >
+          <.link navigate={path} class="text-base">{title}</.link>
+        </.header>
+      </div>
+
+      <div class="md:hidden">
+        <div
+          phx-click={show_modal("menu")}
+          class="text-lg font-semibold text-center cursor-pointer uderline underline-offset-4 "
+        >
+          Menu
+        </div>
+        <.modal id="menu">
+          <div class="flex">
+            <.header>
+              Navigation
+              <:subtitle>
+                <div class="flex flex-col gap-y-4">
+                  <span
+                    :for={
+                      %{title: title, path: path} <- [
+                        %{title: "Home", path: "/"},
+                        %{title: "About", path: "/about"},
+                        %{title: "Blog", path: "/blog"},
+                        %{title: "Projects", path: "/projects"}
+                      ]
+                    }
+                    class={[
+                      @current_uri == path &&
+                        "underline underline-4 underline-offset-4 bg-gray-200 ",
+                      "px-3 py-1 rounded-md w-24  text-gray-700 hover:bg-gray-200"
+                    ]}
+                  >
+                    <.link navigate={path} class="text-base">{title}</.link>
+                  </span>
+                </div>
+              </:subtitle>
+            </.header>
+          </div>
+        </.modal>
+      </div>
+
+      <ul class="relative z-10 flex items-center gap-4 px-4 text-sm sm:px-6 lg:px-8 justify-end">
+        <%= if @current_user do %>
+          <li class="leading-6">
+            Hello {@current_user.username}!
+          </li>
+          <li>
+            <.link href={~p"/users/settings"} class="text-[0.8125rem] leading-6 font-semibold">
+              Settings
+            </.link>
+          </li>
+          <li>
+            <.link href={~p"/users/log_out"} method="delete" class=" leading-6 font-semibold">
+              Log out
+            </.link>
+          </li>
+        <% else %>
+          <li>
+            <.link href={~p"/users/register"} class="leading-6 font-semibold">
+              Register
+            </.link>
+          </li>
+          <li>
+            <.link href={~p"/users/log_in"} class="leading-6 font-semibold">
+              Log in
+            </.link>
+          </li>
+        <% end %>
+      </ul>
     </div>
   </div>
 </header>
